fix issue where "Dealer Sign In" link text layout was bad on mobile

--- a/app/assets/stylesheets/layout-pub.css.scss
+++ b/app/assets/stylesheets/layout-pub.css.scss
@@ -44,13 +44,13 @@ body {
     .entypo-cart {
         float: right;
         font-size: 48px;
-        margin-left: 18px;
+        margin-left: 7px;
     }
     .dealer-sign-in-link,
     .dealer-sign-out-link {
         float: right;
         color: lighten($text_lightgray, 20%);
-        font-size: 13px;
+        font-size: 12px;
 
         &:hover {
             color: $hotpink;
@@ -64,7 +64,17 @@ body {
     position: relative;
     top: -3px;
 }
-
+@media only screen and (min-width: 768px) {
+    .container-menu {
+        .entypo-cart {
+            margin-left: 18px;
+        }
+        .dealer-sign-in-link,
+        .dealer-sign-out-link {
+            font-size: 14px;
+        }
+    }
+}
 .container-main {
     border: 1px solid #ddd;
     background-color: #fff;
